--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - arrow <0.14.0
     - python
     - pytest >=3.3.0,<6.0.0
-    - cookiecutter >=1.4.0,<=1.6.0
+    - cookiecutter >=1.4.0,<1.8.0
 
 test:
   imports:
